--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,37 @@
 version: "3.1"
 services:
 
-    redis:
-      image: redis
+  redis:
+    container_name: redis_vesoul
+    image: redis
 
-    mysql:
-      image: mysql:8
-      container_name: db
-      volumes:
-        - .:/application
-      environment:
-        - MYSQL_ROOT_PASSWORD=toortoor
-        - MYSQL_DATABASE=vesoul
-        - MYSQL_USER=root
-        - MYSQL_PASSWORD=toortoor
-      ports:
-        - "8082:3306"
+  mysql:
+    image: mysql:8
+    container_name: db_vesoul
+    volumes:
+      - .:/application
+    environment:
+      - MYSQL_ROOT_PASSWORD=toortoor
+      - MYSQL_DATABASE=vesoul
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=toortoor
+    ports:
+      - "8082:3306"
 
-    web:
-      image: nginx:latest
-      volumes:
-          - .:/application
-          - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      ports:
-       - "8080:80"
+  web:
+    container_name: web_vesoul
+    image: nginx:latest
+    volumes:
+      - .:/application
+      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "8080:80"
 
-    php:
-      build: docker/php
-      volumes:
-        - .:/application:cached
-        - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.4/fpm/conf.d/99-overrides.ini
-      links:
-        - redis
+  php:
+    container_name: php_vesoul
+    build: docker/php
+    volumes:
+      - .:/application:cached
+      - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.4/fpm/conf.d/99-overrides.ini
+    links:
+      - redis
